파비콘 추가

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -13,6 +13,8 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>딜링아트</title>
+<!-- 	<link rel="icon" href="http://localhost/resources/static/favicon.ico" /> -->
+ 	<link rel="icon" href="favicon.ico">
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.min.css">
 	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
