딜 페이지 수정, 경매 거래내역 판매자/구매자 페이지 쿠폰 적용 할인 적용 결제 테스트 완료, 보증서 보기 거래내역상세로 이동

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -332,8 +332,8 @@
 		<div class="modal-content">
 			<div class="modal-body">
 				<div class="modal-bs">
-					<div class="mb-img-1"><a href="#" alt="작가 본인 선택"></a></div>
-					<div class="mb-img-2"><a href="#" alt="소장중인 작품"></a></div>
+					<div class="mb-img-1"><a href="#" alt="작가 본인 선택" id="myWork"></a></div>
+					<div class="mb-img-2"><a href="#" alt="소장중인 작품" id="myCollection"></a></div>
 					<a href="#" class="mb-a" data-dismiss="modal" aria-label="Close"><img src="/resources/img/de/end-btn.png" /></a>
 				</div>
 			</div>
