스크랩 하트 온 기능 추가, 거래 종료도 스크랩 되게 변경, 구매자 1차결제완료시 work 테이블 판매여부 변경

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -200,7 +200,7 @@ $(function() {
 					html += '</div>'
 					
 					html += '<div class="item-body">';
-					
+					html += '<div class="heart" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 					html += '<div>';
 					html += '<div class="uesr-s">';
 					if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
@@ -265,7 +265,7 @@ $(function() {
 	     			html += '		</div>';
 					html += '</div>';
 					html += '<div class="item-body">';
-					
+					html += '<div class="heart" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 					html += '<div>';
 					html += '<div class="uesr-s">';
 					if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
@@ -311,7 +311,7 @@ $(function() {
 					html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 					html += '</div>';
 					html += '<div class="item-body">';
-					
+					html += '<div class="heart" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 					html += '<div>';
 					html += '<div class="uesr-s">';
 					if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
@@ -355,6 +355,7 @@ $(function() {
 					
 					html += '</div>';
 					html += '<div class="item-body">';
+					html += '<div class="heart" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 					html += '<div>';
 					html += '<div class="uesr-s">';
 					if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
