--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -255,7 +255,8 @@ function scrapList(){
 				html += '<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '</div>';
 				html += '<div class="item-body">';
-				html += '<div class="heartsoldout" workSq="'+ dealList[i].workSq +'" style="cursor:pointer;"></div>';
+				//html += '<div class="heartsoldout" workSq="'+ dealList[i].workSq +'" style="cursor:pointer;"></div>';
+				html += '<div class="heart on" workSq="'+ dealList[i].workSq +'" style="cursor:pointer;"></div>';
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(dealList[i].artstProfileImgUrl == null || dealList[i].artstProfileImgUrl == ""){
@@ -288,6 +289,47 @@ function scrapList(){
 				html += '</div>';
 				html += '</div>';
 		    
+	    
+			}
+			
+			if(dealList[i].dealTypCd == null){
+				
+				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
+				html += '<div >';
+				html += '<div class="item-div-img" >';
+				//작품 이미지
+				html += '<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
+				
+				html += '</div>';
+				html += '<div class="item-body">';
+				html += '<div class="heart on" workSq="'+ dealList[i].workSq +'" style="cursor:pointer;"></div>';
+				html += '<div>';
+				html += '<div class="uesr-s">';
+				if(dealList[i].artstProfileImgUrl == null || dealList[i].artstProfileImgUrl == ""){
+ 				html += '<img src="resources/img/de/ues-icon.png"/>';
+     			}else{
+     				html += '<img src="'+ dealList[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
+     			}
+				html += '</div>';
+				
+				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
+				html += '<h3>'+ dealList[i].artstActvtyNm +' ('+ dealList[i].artstBirthYear +')</h3>';
+				html += '<p class="ts-1">'+ dealList[i].workNm +' ('+ dealList[i].workProdcYear +')</p>';
+				html += '<p>'+ dealList[i].workMatrl +'</p>';
+				html += '<p>'+ dealList[i].workSizeDepth +'x'+ dealList[i].workSizeWidth +'</p>';
+				html += '</div>'
+				
+				html += '</div>';
+				
+				if(dealList[i].authSq == 2){
+ 				html += '<div class="artist active"><span>Artist</span></div>';
+ 				}
+ 				if(dealList[i].authSq == 1){
+ 				html += '<div class="artist"><span>Artist</span></div>';
+ 				}
+				html += '</div>';
+				html += '</div>';
+				html += '</div>';
 	    
 			}
 	   
