--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -42,6 +42,13 @@
     <script type="text/javascript" src="resources/js/bootstrap-select.min.js"></script>
     <script type="text/javascript" src="resources/js/defaults-ko_KR.min.js"></script>
     
+	<!-- jQuery.timepicker -->
+<!--     <script src="https://cdn.jsdelivr.net/timepicker.js/latest/timepicker.min.js"></script> -->
+<!-- 	<link href="https://cdn.jsdelivr.net/timepicker.js/latest/timepicker.min.css" rel="stylesheet"/> -->
+	
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    
 	<!-- CK에디터 -->
 	<script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
     
