--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -477,6 +477,52 @@ function vaild(){
 		modalAlertShow("작품 소장가가 입력되지 않았습니다.");
 		return false;
 	}
+	
+	//이미지 용량 확인 체크 시작
+	if($("#workGrtUrl").val() != ""){	
+		var maxSize = 5 * 1024 * 1024; // 5MB
+		var fileSize = $("#workGrtUrl")[0].files[0].size;
+
+		if(fileSize > maxSize){
+			modalAlertShow("보증서의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "workGrtUrl");
+			return false;
+		}
+	}else if($("#workImgLefUrl").val() != ""){	
+		var maxSize = 5 * 1024 * 1024; // 5MB
+		var fileSize = $("#workImgLefUrl")[0].files[0].size;
+
+		if(fileSize > maxSize){
+			modalAlertShow("작품 사진(좌)의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "workImgLefUrl");
+			return false;
+		}
+	}else if($("#workImgRitUrl").val() != ""){	
+		var maxSize = 5 * 1024 * 1024; // 5MB
+		var fileSize = $("#workImgRitUrl")[0].files[0].size;
+
+		if(fileSize > maxSize){
+			modalAlertShow("작품 사진(우)의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "workImgRitUrl");
+			return false;
+		}
+	}else if($("#workImgTopUrl").val() != ""){	
+		var maxSize = 5 * 1024 * 1024; // 5MB
+		var fileSize = $("#workImgTopUrl")[0].files[0].size;
+
+		if(fileSize > maxSize){
+			modalAlertShow("작품 사진(상)의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "workImgTopUrl");
+			return false;
+		}
+	}else if($("#workImgBotUrl").val() != ""){	
+		var maxSize = 5 * 1024 * 1024; // 5MB
+		var fileSize = $("#workImgBotUrl")[0].files[0].size;
+
+		if(fileSize > maxSize){
+			modalAlertShow("작품 사진(하)의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "workImgBotUrl");
+			return false;
+		}
+	}
+	//이미지 용량 확인 체크 끝
+	
+
 	return true;
 }
 
