--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -73,7 +73,10 @@
 												dropZone.css('background-color', '#FFFFFF');
 								
 												var fileObject = e.originalEvent.dataTransfer.files;
-											
+												
+												
+												
+												
 												if (fileObject != null) {
 													if (fileObject.length < 1) {
 														/* alert("폴더 업로드 불가"); */
@@ -104,7 +107,14 @@
 												formData.append("file", file.files[0]);
 											}
 											
-
+											var maxSize = 5 * 1024 * 1024; // 5MB
+											var fileSize = file.size;
+											
+											if(fileSize > maxSize){
+												modalAlertShow("프로필 이미지의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "file");
+												return false;
+											}
+											
 									        fetch("/file/upload", {
 									            method : "POST"
 									            , body : formData
@@ -1341,6 +1351,16 @@
 		if(isEmpty(artstActvtyNm)) {
 			modalAlertShow("활동명을 등록해 주세요.","");
 			 return;
+		}
+		
+		if($("#file").val() != ""){	
+			var maxSize = 5 * 1024 * 1024; // 5MB
+			var fileSize = $("#file")[0].files[0].size;
+			
+			if(fileSize > maxSize){
+				modalAlertShow("프로필 이미지의 용량이 5MB가 넘습니다. 5MB이상은 첨부파일을 올릴 수 없습니다.", "file");
+				return false;
+			}
 		}
 		
 		let baseParams = {
