--- a/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
@@ -24,6 +24,7 @@
 
   <!-- CK에디터 -->
   <script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
+  <script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/translations/ko.js"></script>
   
   <!--2022-03-10 추가 -->	
   <style type="text/css">
